<resources>
    <string name="app_name">tech radar</string>
    <string name="rechercher_un_candidat">rechercher un candidat</string>
    <string name="tous">Tous</string>
    <string name="favoris">Favoris</string>
    <string name="fab_add_content">fab_add_content</string>
    <string name="edit">Modifier</string>
    <string name="supprimer">supprimer</string>
    <string name="avatar_picture">avatar_picture</string>
    <string name="appel">Appel</string>
    <string name="Sms">SMS</string>
    <string name="Email">Email</string>
    <string name="call_button_item">call_button_item</string>
    <string name="A_propos">A propos</string>
    <string name="placeholder">
        Je m\'appelle John Doe, j\'ai 25 ans et je suis éleveur de porc en Afghanistan.
    </string>
    <string name="modifier_un_candidat">Modifier un candidat</string>


    <string name="champ_obligatoire">Champ obligatoire</string>

    <string name="Prétentions_salariales">Prétentions salariales</string>
    <string name="_3500">3500€</string>
    <string name="Notes">Notes</string>
    <string name="Disponible_de_suite">Disponible de suite</string>
    <string name="Prénom">prénom</string>
    <string name="person_icon">person_icon</string>
    <string name="Nom">Nom</string>
    <string name="Téléphone">Téléphone</string>
    <string name="phone_icon">phone_icon</string>
    <string name="mail_icon">mail_icon</string>
    <string name="Sélectionner_une_date">Sélectionner une date</string>
    <string name="Entrer_une_date">Entrer une date</string>
    <string name="birthday_icon">birthday_icon</string>
    <string name="calendar_icon">calendar_icon</string>
    <string name="Date">Date</string>
    <string name="jj_mm_aaaa">jj/mm/aaaa</string>
    <string name="Note">Note</string>
    <string name="edit_icon">edit_icon</string>

    <string name="wage_text">%1$s %2$s</string>
    <string name="euro">€</string>
    <string name="pound" translatable="false">£</string>

    <string name="ans">ans</string>


    <string name="error_mail">format d\'email invalide</string>
    <string name="wadge_layout">wadge_layout</string>
    <string name="Sauvegarder">Sauvegarder</string>
    <string name="home">home</string>
    <string name="backstack">backstack</string>


    <string name="about_text">%1$s %2$d %3$s</string>
    <string name="veuillez_remplir_au_moins_un_champ">Veuillez remplir au moins un champ</string>

    <string name="supprimer_candidat">Etes-vous sûr de vouloir supprimer ce candidat? Cette action est irréversible.</string>

    <string name="annuler">Annuler</string>

    <string name="confirmer">Confirmer</string>

    <string name="suppression">Suppression</string>

    <string name="format">Format invalide</string>

    <string name="ajouter">Ajouter un candidat</string>
    <string name="soit">Soit</string>


</resources>