<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.edit.Edit">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/border">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/layout_appbar"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/top_bar"
                android:minHeight="?attr/actionBarSize"
                app:navigationIcon="@drawable/backstack"
                app:title="Modifier un candidat" />


        </com.google.android.material.appbar.AppBarLayout>


        <ImageView
            android:id="@+id/avatar"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_margin="15dp"
            android:background="@color/picture"
            android:contentDescription="@string/avatar_picture"
            android:src="@drawable/baseline_category_24"
            app:layout_constraintTop_toBottomOf="@+id/layout_appbar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/prenom_layout"
            android:layout_width="332dp"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:hint="@string/Prénom"
            app:hintTextColor="@color/top_bar"
            app:layout_constraintEnd_toEndOf="@id/avatar"
            app:layout_constraintTop_toBottomOf="@id/avatar">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                />


        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/person_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/person_icon"
            android:src="@drawable/person"
            app:layout_constraintEnd_toStartOf="@id/prenom_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatar"
            app:layout_constraintTop_toTopOf="@id/prenom_layout"

            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nom_layout"
            android:layout_width="332dp"
            android:layout_height="56dp"
            android:layout_marginTop="30dp"
            android:hint="@string/Nom"
            app:hintTextColor="@color/top_bar"
            app:layout_constraintEnd_toEndOf="@id/avatar"
            app:layout_constraintTop_toBottomOf="@id/prenom_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_layout"
            android:layout_width="332dp"
            android:layout_height="56dp"
            android:layout_marginTop="30dp"
            android:hint="@string/Téléphone"
            app:hintTextColor="@color/top_bar"
            app:layout_constraintEnd_toEndOf="@id/avatar"
            app:layout_constraintTop_toBottomOf="@id/nom_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                />


        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/phone_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/phone_icon"
            android:src="@drawable/call"
            app:layout_constraintEnd_toStartOf="@id/phone_layout"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="@id/phone_layout" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mail_layout"
            android:layout_width="332dp"
            android:layout_height="56dp"
            android:layout_marginTop="30dp"
            android:hint="@string/Email"
            app:hintTextColor="@color/top_bar"
            app:layout_constraintEnd_toEndOf="@id/avatar"
            app:layout_constraintTop_toBottomOf="@id/phone_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:id="@+id/mail_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/mail_icon"
            android:src="@drawable/email"
            app:layout_constraintEnd_toStartOf="@id/mail_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/mail_layout" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/birthday_card"
            style="?attr/materialCardViewFilledStyle"
            android:layout_width="332dp"
            android:layout_height="218dp"
            android:layout_marginTop="40dp"
            android:background="@color/searchBar"
            app:layout_constraintEnd_toEndOf="@id/mail_layout"
            app:layout_constraintTop_toBottomOf="@+id/mail_layout">


            <TextView
                android:id="@+id/selection_titre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/Sélectionner_une_date" />

            <TextView
                android:id="@+id/date_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:text="@string/Entrer_une_date"
                android:textSize="35sp" />

            <ImageView
                android:id="@+id/calendar_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/calendar"
                android:contentDescription="@string/calendar_icon"
                android:layout_gravity="center|end"
                android:layout_marginEnd="15dp"
                android:clickable="true"
                />
            



        </com.google.android.material.card.MaterialCardView>



        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/cake"
           android:contentDescription="@string/birthday_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mail_icon"
            app:layout_constraintEnd_toStartOf="@+id/birthday_card"
            app:layout_constraintTop_toTopOf="@+id/birthday_card"


            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>