<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.detail.Detail"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/border">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/layout_appbar"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/top_bar"
                android:minHeight="?attr/actionBarSize"
                app:menu="@menu/appbar_menu"
                app:navigationIcon="@drawable/backstack" />


        </com.google.android.material.appbar.AppBarLayout>


        <ImageView
            android:id="@+id/avatar"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_margin="15dp"
            android:background="@color/picture"
            android:contentDescription="@string/avatar_picture"
            android:src="@drawable/baseline_category_24"
            app:layout_constraintTop_toBottomOf="@+id/layout_appbar" />

        <Button
            android:id="@+id/call"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/call_button_item"
            android:drawableTop="@drawable/call"
            app:layout_constraintEnd_toStartOf="@+id/message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />

        <TextView
            android:id="@+id/callText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appel"
            app:layout_constraintEnd_toEndOf="@+id/call"
            app:layout_constraintStart_toStartOf="@+id/call"
            app:layout_constraintTop_toBottomOf="@+id/call" />

        <Button
            android:id="@+id/message"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/Email"
            android:drawableTop="@drawable/sms"
            app:layout_constraintEnd_toStartOf="@+id/mail_button"
            app:layout_constraintStart_toEndOf="@+id/call"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />

        <TextView
            android:id="@+id/message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sms"
            app:layout_constraintEnd_toEndOf="@+id/message"
            app:layout_constraintStart_toStartOf="@+id/message"
            app:layout_constraintTop_toBottomOf="@+id/message" />


        <Button
            android:id="@+id/mail_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/Email"
            android:drawableTop="@drawable/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/message"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />


        <TextView
            android:id="@+id/mail_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            app:layout_constraintEnd_toEndOf="@+id/mail_button"
            app:layout_constraintStart_toStartOf="@+id/mail_button"
            app:layout_constraintTop_toBottomOf="@+id/mail_button" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/apropos_card"
            android:layout_width="match_parent"
            android:layout_height="159dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/top_bar"
            android:checkable="false"
            android:clickable="false"
            android:elevation="0dp"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@+id/callText">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/A_propos"
                android:textStyle="bold"
                android:textSize="16sp"  />

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="372dp"
                android:layout_height="119dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="40dp"
                android:hint="@string/exemple_je_m_appelle_john_doe_j_ai_25_ans_et_je_suis_leveur_de_porc_en_afghanistan"
                app:boxBackgroundMode="none"
               >

            </com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.card.MaterialCardView>



        <com.google.android.material.card.MaterialCardView
            android:id="@+id/pretentions_card"
            android:layout_width="match_parent"
            android:layout_height="159dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/top_bar"
            android:checkable="false"
            android:clickable="false"
            android:elevation="0dp"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@+id/apropos_card">





        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>